<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="restart_the_app_for_the_full_effect">Restart the app for the full effect</string>
    <string name="sound">Sound</string>
    <string name="look_and_feel">Look and Feel</string>
    <string name="enable_dark_mode">Enable Dark Mode:</string>
    <string name="dark_mode">Dark Mode:</string>
    <string name="settings">Settings</string>
    <string name="soundtext">Sound:</string>
    <string name="soundswitch">Sound:</string>
    <string name="back">Back</string>
    <string name="scan">Scan</string>
    <string name="developed_by_rmg_studios">Developed by: RMG Studios</string>
    <string name="action_settings">Settings</string>
    <string name="NO_BLUETOOTH_CAPABILITY">No Bluetooth Capability</string>
    <string name="NO_BLUETOOTH_CAPABILITY_MESSAGE">This device does not have bluetooth capabilities.</string>
    <string name="NO_CONNECTED_DEVICE">No Connected Devices</string>
    <string name="MULTIPLE_CONNECTED_DEVICE">Multiple Connected Devices</string>
    <string name="CONNECTED_DEVICES_MESSAGE">Please pair your device with exactly one other Android device in order to use the bluetooth functionality for Tic Tac Toe.</string>
    <string name="ok">OK</string>
    <string name="cats_game">Cat\'s Game</string>
    <string name="new_game">New Game</string>
    <string name="two_devices">Two Devices</string>
    <string name="single_device">Single Device</string>
</resources>
