<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/settings_header"
        android:layout_marginTop="35dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="28dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/settings_header"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="115dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="28dp" />

    <TextView
        android:id="@+id/dark_mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/divider1"
        android:layout_marginTop="41dp"
        android:text="@string/enable_dark_mode"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/darkmode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:layout_toEndOf="@+id/dark_mode_text"
        android:text="@string/dark_mode" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/divider1"
        android:layout_marginTop="5dp"
        android:text="@string/look_and_feel"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/divider1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="88dp"
        android:text="@string/sound"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="29dp"
        android:text="@string/soundtext"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/sound_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:layout_marginStart="-77dp"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/dark_mode_text"
        android:checked="true"
        android:text="@string/soundswitch" />

    <Button
        android:id="@+id/backBtnSettings"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="Back" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/settings_header"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="184dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="28dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/divider1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="158dp"
        android:text="Notifications"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="102dp"
        android:text="Notifications"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/notifSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="223dp"
        android:text="Notifications:" />
</RelativeLayout>